--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <title>Hello World</title>
     <head>
-        <h1>Hello World</h1>
+        <h1 ALIGN = center>Hello World</h1>
     </head>
 </html>
