--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <title>Hello World</title>
-    <head>
-        <h1 ALIGN = center>Hello World</h1>
-    </head>
+        <head>
+            <h1 ALIGN = center>Hello World</h1>
+        </head>
+            <body>
+                <div align = center>Ciao a <em>tutto il mondo!</em></div>
+            </body>
 </html>
